# otilib

./: .buildinfo  .gitignore  CMakeLists.txt  Makefile  README.md  aboutus.html  basic_env.yml  dev_env.yml  env_basic.yml  env_macos.yml  environment.yml  examples.html  genindex.html  index.html  installation.html  makefile  modules.html  objects.inv  py-modindex.html  pyoti.html  search.html  searchindex.js  tutorials.html
examples/: CMakeLists.txt
examples/c/: basic_array.c  basic_scalar.c
examples/fortran/: basic_scalar.f90  ex1_oti_core.f90  ex2_sparse_n1.f90  ex3_static_m1n2.f90
examples/notebooks/: core_tutorial_01.ipynb  sparse_tutorial_03.ipynb
examples/notebooks/.ipynb_checkpoints/: sparse_tutorial_01-checkpoint.ipynb  sparse_tutorial_02-checkpoint.ipynb  sparse_tutorial_03-checkpoint.ipynb
examples/python/: basic_array.py  basic_highorder.py  basic_linalg.py  basic_scalar.py  quick_example.py
src/: CMakeLists.txt
src/c/: -CMakeLists.txt  base_math.c  core.c  darray.c  dense.c  diagonal.c  fem.c  mdnum2.c  mdnum3.c  mdnum4.c  mdnum5.c  onumm10n1.c  onumm1n1.c  onumm1n10.c  onumm1n2.c  onumm1n3.c  onumm1n5.c  onumm2n2.c  onumm2n5.c  onumm3n2.c  onumm3n3.c  otifem.c  otifem_array.c  otilib.c  otilib.h  otinum_dense.c  otinum_spr.c  otinum_spr_array.c  read_npy  read_npy.c  real.c  semisparse.c  sparse.c  static.c  test  test.c
src/c/complex/: function_derivatives.c  function_derivatives_gen.c
src/c/core/: base.c  dense_helper.c  end_program_error.c  generation.c  load.c  sparse_helper.c  utils.c  xpy = pow(x,y)
src/c/dense/: algebra.c  algebra_to.c  array_algebra_elementwise.c  array_algebra_helper.c  array_algebra_matops.c  array_base.c  base.c  functions.c  functions_to.c  trunc_ops.c
src/c/fem/: % Behaviour of the stator voltage and the RMS-valu  base.c  basis_functions.c  elem.c  elem_utils.c  element.c  feoarr_algebra_elementwise.c  feoarr_algebra_matops.c  feoarr_base.c  gauss.c  helper_functions.c  integration_points.c  otifem.c
src/c/old/: core.c  darray.c  otifem.c  read_npy.c
src/c/real/: array_algebra_elementwise.c  array_algebra_matops.c  array_base.c  array_function.c  function_derivatives.c  function_derivatives_gen.c
src/c/sparse/: algebra.c  algebra_to.c  array_base.c  base.c  functions.c  functions_to.c  trunc_ops.c
src/c/static/: mdnum1.c  mdnum10.c  mdnum2.c  mdnum3.c  mdnum4.c  mdnum5.c  mdnum6.c  mdnum7.c  mdnum8.c  mdnum9.c  onumm0n0.c  onumm10n1.c  onumm10n2.c  onumm1n1.c  onumm1n10.c  onumm1n2.c  onumm1n20.c  onumm1n3.c  onumm1n30.c  onumm1n4.c  onumm1n5.c  onumm1n6.c  onumm1n7.c  onumm1n8.c  onumm1n9.c  onumm2n1.c  onumm2n10.c  onumm2n2.c  onumm2n3.c  onumm2n4.c  onumm2n5.c  onumm2n6.c  onumm2n7.c  onumm2n8.c  onumm2n9.c  onumm3n1.c  onumm3n2.c  onumm3n3.c  onumm3n4.c  onumm3n5.c  (+18 more)
src/cpp/: Makefile  array.cpp  cayleydickson.cpp  core.cpp  dual.cpp  test_read_binary.cpp
src/cython/: ndarray.pxi  otifem.pxi  otilib.pyx  otinum.pxi  setup.py  setup.py.in  sndarray.pxi  sotinum.pxi
src/datagen/: datagen.py  dgen_v1_0.py  oti_gen_data.c
src/fortran/: CMakeLists.txt  fortran_oti_writer.py  master_parameters.mod  oti_n2m2.f90
src/fortran/OTI-Order1-var8/: Makefile  octonions.mod  testOctoMat
src/fortran/core/: Makefile  master_parameters.f90  master_parameters.mod  oti_core.f90  real_utils.f90  real_utils.mod
src/fortran/experimental/: array_interface_m1n1.f90  array_interface_m1n2.f90  array_interface_m1n3.f90  array_interface_m1n4.f90  array_interface_m2n1.f90  array_interface_m2n2.f90  array_interface_m2n3.f90  array_interface_m2n4.f90  array_interface_m3n1.f90  array_interface_m3n2.f90  array_interface_m3n3.f90  array_interface_m3n4.f90
src/fortran/oti_types/: otim2n2.f90  otim2n2.mod  test  testoti.f90
src/fortran/semi-sparse/: imdir_utils.f90  otin1.f90
src/fortran/sparse/: paratemetized.f90  soti_n1.f90  sparse_oti.f90  sparse_oti.mod
src/fortran/static/: Makefile  cwrapm1n1.f90  cwrapm1n1.mod  cwrapm1n2.f90  cwrapm1n2.mod  cwrapm1n3.f90  cwrapm1n3.mod  cwrapm1n4.f90  cwrapm1n4.mod  cwrapm2n1.f90  cwrapm2n1.mod  cwrapm2n2.f90  cwrapm2n2.mod  cwrapm2n3.f90  cwrapm2n3.mod  cwrapm2n4.f90  cwrapm2n4.mod  cwrapm3n1.f90  cwrapm3n1.mod  cwrapm3n2.f90  cwrapm3n2.mod  cwrapm3n3.f90  cwrapm3n3.mod  cwrapm3n4.f90  cwrapmtemplate.f90  file_writer.py  master_parameters.f90  master_parameters.mod  otim1n1.f90  otim1n1.mod  otim1n10.f90  otim1n2.f90  otim1n2.mod  otim1n3.f90  otim1n3.mod  (+26 more)
src/python/: readme.txt  setup.py
tests/: CMakeLists.txt  derivs_wolfram_alpha.txt
tests/c/: CMakeLists.txt  a.out  c_test.c  cunit_test.c  mp  omp_hello.c  read_npy.h  sparse_scalar_01.c  test_argv.c  test_gen_data.c  test_imdir_mult.c  test_import.c  test_malloc_size0.c  test_matmul.c  test_matmul_omp.c  test_new_arrays.c  test_omp.c  test_otinum.c  test_progress_bar.c  test_semiotin.c  test_sotinum.c  test_sparse_sum.c
tests/cpp/: a.out  dual.cpp  error_codes.hpp  ndirs_n1_m10.npy  omp_version.cpp  test.cpp
tests/fortran/: Makefile  results_oti_fortran_performance.xlsx  test  test_oti_type.f90  testoti.f90  tests_omp.f90  ~$results_oti_fortran_performance.xlsx
tests/jupyter_notebook/: Curvature_AnalyticFunction.ipynb  Generate_Latex_ImDir.ipynb  Implementation_check.ipynb  MaximumDirectionsInteger.ipynb  MemoryComsumptionComparison.ipynb  OTI vs MultiDual.ipynb  Untitled.ipynb  Untitled3.ipynb  Untitled6.ipynb  Untitled7.ipynb  Usage_OTI_21082019.ipynb  array_ops_tests.ipynb  generate_precomputed_data.ipynb  matrix_form_20190904.ipynb  new_array_tests.ipynb  pres_functions.ipynb  test_FastFunctions.ipynb  test_dense_new_20190214.ipynb  test_derivatives.ipynb  test_fastImpl.ipynb  test_genericFunctions.ipynb  test_implementation.ipynb  test_integration_1.ipynb  test_matrixForm.ipynb  test_newDataStructure.ipynb  test_newMatrix.ipynb  test_newOTIlib.ipynb  test_new_mult_arrays.ipynb  test_new_sparse_20190318.ipynb  test_ode_solution_oti.ipynb  test_omat_082019.ipynb  test_otivec.ipynb  test_spr_dualmat.ipynb
tests/notebooks/: Untitled.ipynb  Untitled1.ipynb  Untitled2.ipynb
tests/python/: TimeProfiling.txt
(+7588 files in other folders)
